[project]
name = "agentic-rag"
version = "0.1.0"
description = "A LangChain React agent with RAG capabilities for PDF documents and web search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-react>=0.0.1",
    "pypdf>=3.17.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo-search>=4.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentic_RAG"]
